# Shaderlay

./: .gitignore  CONTRIBUTING.md  EXTERNAL_SHADERS.md  GITHUB_SETUP.md  LICENSE  README.md  build.gradle.kts  detekt.yml  gradlew  settings.gradle.kts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android.yml  pr-validation.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: crt.slang  crt.slangp  lcd-grid.slang  lcd-grid.slangp  passthrough.slang  passthrough.slangp  scanlines.slang  scanlines.slangp
app/src/main/cpp/: CMakeLists.txt  jni_interface.cpp  shader_compiler.cpp  shader_compiler.h  slang_parser.cpp  slang_parser.h  spirv_handler.cpp  spirv_handler.h
app/src/main/java/com/shaderlay/app/receiver/: BootReceiver.kt
app/src/main/java/com/shaderlay/app/renderer/: GLOverlaySurfaceView.kt  ShaderRenderer.kt
app/src/main/java/com/shaderlay/app/service/: OverlayService.kt
app/src/main/java/com/shaderlay/app/shader/: ExternalShaderManager.kt  NativeShaderCompiler.kt  ShaderCache.kt  ShaderManager.kt
app/src/main/java/com/shaderlay/app/ui/: CustomShaderPreference.kt  MainActivity.kt  SettingsActivity.kt
app/src/main/res/drawable/: ic_layers.xml  ic_toggle.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-hdpi/: ic_launcher_round.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  preferences.xml
